# TA-MPQ

./: ACTIVE_MAINLINE.md  BF16_BUDGET_PROBLEM_STATEMENT.md  EVOLUTIONARY_VS_BEAM_SEARCH_PROBLEM_STATEMENT.md  EXISTING_OFFICIAL_DATA.md  PAPER_REFERENCE_NOTES.html  README.md  RESULTS_SUMMARY.html  TA_MPQ_CURRENT_RESULTS_POSTER.aux  TA_MPQ_CURRENT_RESULTS_POSTER.html  TA_MPQ_CURRENT_RESULTS_POSTER.tex  TA_MPQ_DETAILED_RESULTS_POSTER.aux  TA_MPQ_DETAILED_RESULTS_POSTER.tex  TA_MPQ_POSTER_FULL_TEXT.md  beamerposter.sty  pyproject.toml  status_quo.md
configs/: experiment_contract.json  experiment_contract_27b_9b.json  experiment_contract_27b_9b_math500.json  experiment_contract_9b_math500_int8.json  surrogate_math500_bootstrap_v1.json  surrogate_math500_bootstrap_v2.json  surrogate_math500_bootstrap_v3.json  surrogate_math500_bootstrap_v4.json  task_sensitivity_exact_budget_math500.yaml  task_sensitivity_exact_budget_mmlu_coding.yaml
mlsys2025style 2/: forloop.sty  ta_mpq_mlsys_paper.aux  ta_mpq_mlsys_paper.bbl  ta_mpq_mlsys_paper.bib  ta_mpq_mlsys_paper.blg  ta_mpq_mlsys_paper.tex
poster/: current_results_summary.yaml  current_results_summary_table.html  poster.html  poster.md
scripts/: build_threshold_policies.py  evaluate_policy_frontier.py  profile_sensitivity.py  select_final_policy.py
tests/: graph.md  test_ablation.py  test_baseline.py  test_closed_loop.py  test_codemmlu.py  test_contracts.py  test_feasibility.py  test_gsm8k.py  test_local_search.py  test_math500.py  test_mmlu_coding.py  test_modal_feasibility_app.py  test_policy_export.py  test_quant_search.py  (+5 more)
(+1550 files in other folders)
