[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ta-mpq"
version = "0.1.0"
description = "Task-aware mixed-precision quantization experiments for Qwen3.5 9B vs 4B."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "modal>=1.4.1",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
